# llm-bullying-detection-e4d9-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.neurico/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper_draft/: main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: main_condition_summary.tex  paired_tests.tex  passrate_auc.tex
papers/: README.md  deep_reading_raw.txt  manual_search_results.json  papers_metadata.json  selected_papers.json
papers/pages/guided_evade/: 2023_large_language_models_can_be_guided_to_evade_ai_generated_text_detecti_manifest.txt
papers/pages/humanizing/: 2024_humanizing_machine_generated_content_evading_ai_text_detection_through_manifest.txt
results/: auc_table.csv  external_records.json  fresh_records.json  metrics.json  pass_rates.csv  scored_texts.csv  stat_tests.csv  summary_table.csv  trajectory_table.csv
results/smoke/: auc_table.csv  external_records.json  fresh_records.json  metrics.json  pass_rates.csv  scored_texts.csv  stat_tests.csv  summary_table.csv  trajectory_table.csv
src/: run_research.py
(+1 files in other folders)
