[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.4.1",
    "datasets>=4.8.4",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.30.0",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tenacity>=9.1.4",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
